--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ sourceCompatibility = 1.8
 
 jar {
     baseName='reactJS-table'
-    version=version
+    version='0.0.1'
 }
 
 repositories {
@@ -27,7 +27,10 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    compile("org.springframework.boot:spring-boot-starter-web")
-    compile("org.springframework.boot:spring-boot-starter-data-jpa")
+    testCompile 'junit:junit:4.12'
+    compile "org.springframework.boot:spring-boot-starter-web"
+    compile "org.springframework.boot:spring-boot-starter-data-jpa"
+    compile 'org.projectlombok:lombok:1.16.16'
+    compile "com.h2database:h2"
+    compile 'mysql:mysql-connector-java'
 }
