--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,11 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.connection.url=jdbc:mysql://localhost:3306/reactjs?useSSL=false
 spring.jpa.properties.hibernate.connection.username=root
 spring.jpa.properties.hibernate.connection.password=root
+
+spring.jpa.properties.hibernate.show_sql=false
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.format_sql=true
+
+server.port=9017
+
+spring.jackson.serialization.write_dates_as_timestamps=false
