--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "readme": "README.md",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "webpack -d --progress"
   },
   "repository": {
     "type": "git",
@@ -18,9 +19,17 @@
   },
   "homepage": "https://github.com/werse/ReactJS-table",
   "dependencies": {
-    "react": "^15.5.4"
-  },
-  "devDependencies": {
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-preset-es2015": "^6.24.1",
+    "css-loader": "^0.28.4",
+    "csso": "^3.1.1",
+    "csso-loader": "^0.3.1",
+    "json-loader": "^0.5.4",
+    "postcss-loader": "^2.0.5",
+    "react-hot-loader": "^1.3.1",
+    "style-loader": "^0.18.2",
     "webpack": "^2.6.1"
-  }
+  },
+  "devDependencies": {}
 }
