--- a/package.json
+++ b/package.json
@@ -19,17 +19,28 @@
   },
   "homepage": "https://github.com/werse/ReactJS-table",
   "dependencies": {
+    "jquery": "^3.2.1",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4"
+  },
+  "devDependencies": {
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-runtime": "^6.23.0",
     "css-loader": "^0.28.4",
-    "csso": "^3.1.1",
-    "csso-loader": "^0.3.1",
-    "json-loader": "^0.5.4",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.11.2",
+    "html-webpack-plugin": "^2.28.0",
     "postcss-loader": "^2.0.5",
     "react-hot-loader": "^1.3.1",
     "style-loader": "^0.18.2",
-    "webpack": "^2.6.1"
-  },
-  "devDependencies": {}
+    "url-loader": "^0.5.8",
+    "webpack": "^2.6.1",
+    "webpack-cleanup-plugin": "^0.5.1"
+  }
 }
