--- a/package.json
+++ b/package.json
@@ -19,11 +19,15 @@
   },
   "homepage": "https://github.com/werse/ReactJS-table",
   "dependencies": {
+    "bootstrap-css": "^4.0.0-alpha.5",
     "jquery": "^3.2.1",
     "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react-dom": "^15.5.4",
+    "react-modal": "^1.7.7"
   },
   "devDependencies": {
+    "autoprefixer": "^7.1.1",
+    "autoprefixer-core": "^6.0.1",
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
