--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
   "homepage": "https://github.com/werse/ReactJS-table",
   "dependencies": {
     "bootstrap-css": "^4.0.0-alpha.5",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "react": "^15.5.4",
+    "react-addons-css-transition-group": "^15.5.2",
     "react-dom": "^15.5.4",
+    "react-icons": "^2.2.5",
     "react-modal": "^1.7.7"
   },
   "devDependencies": {
@@ -32,6 +35,7 @@
     "babel-loader": "^7.0.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-export-extensions": "^6.22.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
@@ -40,6 +44,7 @@
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.28.0",
+    "json-loader": "^0.5.4",
     "postcss-loader": "^2.0.5",
     "react-hot-loader": "^1.3.1",
     "style-loader": "^0.18.2",
