--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "react": "^15.5.4",
     "react-bootstrap": "^0.30.10",
     "react-bootstrap-date-picker": "^5.0.1",
+    "react-bootstrap-maskedinput": "^0.2.1",
     "react-dom": "^15.5.4",
+    "react-input-mask": "^0.9.1",
     "react-modal": "^1.7.7"
   },
   "devDependencies": {
