h2 database instead of mysql

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,26 +1,26 @@
-spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://localhost:3306/reactjs?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=root
+# spring.jpa.hibernate.ddl-auto=create
+# spring.datasource.url=jdbc:mysql://localhost:3306/reactjs?useSSL=false
+# spring.datasource.username=root
+# spring.datasource.password=root
 
 # Configure the C3P0 database connection pooling module
-spring.jpa.properties.hibernate.c3p0.max_size=15
-spring.jpa.properties.hibernate.c3p0.min_size=6
-spring.jpa.properties.hibernate.c3p0.timeout=2500
-spring.jpa.properties.hibernate.c3p0.max_statements_per_connection=10
-spring.jpa.properties.hibernate.c3p0.idle_test_period=3000
-spring.jpa.properties.hibernate.c3p0.acquire_increment=3
-spring.jpa.properties.hibernate.c3p0.validate=false
-spring.jpa.properties.hibernate.c3p0.numHelperThreads=15
+#spring.jpa.properties.hibernate.c3p0.max_size=15
+#spring.jpa.properties.hibernate.c3p0.min_size=6
+#spring.jpa.properties.hibernate.c3p0.timeout=2500
+#spring.jpa.properties.hibernate.c3p0.max_statements_per_connection=10
+#spring.jpa.properties.hibernate.c3p0.idle_test_period=3000
+#spring.jpa.properties.hibernate.c3p0.acquire_increment=3
+#spring.jpa.properties.hibernate.c3p0.validate=false
+#spring.jpa.properties.hibernate.c3p0.numHelperThreads=15
 
-spring.jpa.properties.hibernate.connection.provider_class = org.hibernate.service.jdbc.connections.internal.C3P0ConnectionProvider
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#spring.jpa.properties.hibernate.connection.provider_class = org.hibernate.service.jdbc.connections.internal.C3P0ConnectionProvider
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-spring.jpa.properties.hibernate.connection.url=jdbc:mysql://localhost:3306/reactjs?useSSL=false
-spring.jpa.properties.hibernate.connection.username=root
-spring.jpa.properties.hibernate.connection.password=root
+#spring.jpa.properties.hibernate.connection.url=jdbc:mysql://localhost:3306/reactjs?useSSL=false
+#spring.jpa.properties.hibernate.connection.username=root
+#spring.jpa.properties.hibernate.connection.password=root
 
-spring.jpa.properties.hibernate.show_sql=false
+spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.format_sql=true
 
